[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Levels/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/BG/COLLAPSE!.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/new_game.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/load_save.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/change_controls.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/credits.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/new_game_selected.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/load_save_selected.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/change_controls_selected.png" type="Texture" id=9]
[ext_resource path="res://src/Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 10 )

[node name="Node2D" type="Node"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -1, 1 )
current = true

[node name="Collapse" type="Sprite" parent="."]
position = Vector2( 0, -229 )
texture = ExtResource( 2 )

[node name="NEW_GAME" type="Sprite" parent="."]
position = Vector2( 10, -69 )
texture = ExtResource( 3 )

[node name="NEW_GAME_SELECTED" type="Sprite" parent="."]
visible = false
position = Vector2( 10, -69 )
texture = ExtResource( 7 )

[node name="SEE_CONTROLS" type="Sprite" parent="."]
position = Vector2( 0, 29 )
texture = ExtResource( 5 )

[node name="SEE_CONTROLS_SELECTED" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 29 )
texture = ExtResource( 9 )

[node name="LOAD_SAVE" type="Sprite" parent="."]
position = Vector2( 0, -21 )
texture = ExtResource( 4 )

[node name="LOAD_SAVE_SELECTED" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -21 )
texture = ExtResource( 8 )

[node name="Credits" type="Sprite" parent="."]
position = Vector2( 0, 232 )
texture = ExtResource( 6 )

[node name="NO_SAVE" type="Label" parent="."]
visible = false
margin_left = -253.0
margin_top = 136.0
margin_right = 253.0
margin_bottom = 159.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "THERE IS NO SAVE."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
